<resources>

    <string name="app_name_new">Volume Button Scorekeeper (Two Teams)</string>

    <string name="reset">Reset</string>
    <string name="edit_starting_scores">Edit Starting Scores</string>
    <string name="settings_score_default" translatable="false">0</string>
    <string name="settings_starting_score_default" translatable="false">0</string>
    <string name="team_one_score_key" translatable="false">team_one_score</string>
    <string name="team_one_starting_score_key" translatable="false">team_one_starting_score</string>
    <string name="team_two_score_key" translatable="false">team_two_score</string>
    <string name="team_two_starting_score_key" translatable="false">team_two_starting_score</string>
    <string name="action_save_starting_scores">Save Starting Scores</string>
    <string name="large_number_error_toast">Error: number is too large</string>
    <string name="preference_file_key" translatable="false">pref</string>
    <string name="team">Team</string>
    <string name="save">Save</string>

    <!--Donation page-->
    <string name="action_donate">Donate to Developer</string>
    <string name="donate_title">Donate</string>
    <string name="donate_greeting">Hello!</string>
    <string name="donate_message">My name is Amanda. If you are enjoying this app I developed, please consider purchasing a donation app. The donation app does not do anything, but your donation will show me that my time spent developing free, no-ads apps is appreciated. Thanks!</string>
    <string name="play_store_direct_link_blue" translatable="false">market://details?id=com.amandafarrell.www.donationfordeveloper_blue</string>
    <string name="play_store_browser_link_blue" translatable="false">https://play.google.com/store/apps/details?id=com.amandafarrell.www.donationfordeveloper_blue</string>
    <string name="play_store_direct_link_red" translatable="false">market://details?id=com.amandafarrell.www.donationfordeveloperred</string>
    <string name="play_store_browser_link_red" translatable="false">https://play.google.com/store/apps/details?id=com.amandafarrell.www.donationfordeveloperred</string>
    <string name="play_store_direct_link_black" translatable="false">market://details?id=com.amandafarrell.www.donationfordeveloperblack</string>
    <string name="play_store_browser_link_black" translatable="false">https://play.google.com/store/apps/details?id=com.amandafarrell.www.donationfordeveloperblack</string>
    <string name="small_heart">small heart</string>
    <string name="medium_heart">medium heart</string>
    <string name="large_heart">large heart</string>
    <string name="large">Large</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="zero" translatable="false">0</string>
    <string name="one" translatable="false">1</string>
    <string name="space_two" translatable="false">" 2"</string>
    <string name="space_one" translatable="false">" 1"</string>

</resources>
