<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/label_team1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team"
        android:theme="@style/LabelTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.41000003" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/space_one"
        android:theme="@style/LabelTheme"
        app:layout_constraintBottom_toBottomOf="@+id/label_team1"
        app:layout_constraintStart_toEndOf="@+id/label_team1"
        app:layout_constraintTop_toTopOf="@+id/label_team1" />

    <EditText
        android:hint="@string/zero"
        android:id="@+id/edit_team1_starting_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:selectAllOnFocus="true"
        android:text="@string/one"
        android:textSize="72sp"
        app:layout_constraintBottom_toTopOf="@+id/label_team1"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/label_team1" />

    <TextView
        android:id="@+id/label_team2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team"
        android:theme="@style/LabelTheme"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.706" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/space_two"
        android:theme="@style/LabelTheme"
        app:layout_constraintBottom_toBottomOf="@+id/label_team2"
        app:layout_constraintStart_toEndOf="@+id/label_team2"
        app:layout_constraintTop_toTopOf="@+id/label_team2" />

    <EditText
        android:hint="@string/zero"
        android:id="@+id/edit_team2_starting_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:selectAllOnFocus="true"
        android:text="@string/one"
        android:textSize="72sp"
        app:layout_constraintBottom_toTopOf="@+id/label_team2"
        app:layout_constraintEnd_toEndOf="@+id/label_team2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/label_team2" />

    <Button
        android:id="@+id/button_save"
        style="@style/ButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="saveOnClick"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>